Fixes #1037. Accessible color contrast for export dropdown and date picker.

--- a/sfm/ui/static/ui/css/main.css
+++ b/sfm/ui/static/ui/css/main.css
@@ -292,3 +292,12 @@ p.harvest-type-display {
 	width:auto;
 	height:auto;
 }
+
+.filter-option-inner-inner {
+    color: #333;
+}
+
+span.flatpickr-day.selected {
+    background-color: #2971a7;
+    border-color: #2971a7; 
+}
